# testdwg

./: .buildinfo  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.changes/: .gitignore  2.removal  any.feat  lasdkjf.fix
.github/workflows/: changelog._yml  changelog.yml  document.yml  publish.yml  release.yml  sphinx._yml  sphinx.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
testdwg/: __init__.py  main.py
