[tool.poetry]
name = "testdwg"
version = "0.1.0"
description = ""
authors = ["yatmanov <yatmanov@megaputer.ru>"]
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.0.1"
towncrier = "^23.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
